[gd_scene load_steps=5 format=3 uid="uid://c2mccesqsug76"]

[ext_resource type="Script" path="res://scripts/pickup.gd" id="1_alfjg"]
[ext_resource type="Texture2D" uid="uid://bn8bmwi0h8ohh" path="res://assets/pickups/ðŸ“œ.png" id="1_i8y84"]
[ext_resource type="Resource" uid="uid://bl5ey3fufmbv6" path="res://Resources/scroll.tres" id="2_85qyg"]

[sub_resource type="CircleShape2D" id="CircleShape2D_pidkg"]
radius = 16.1245

[node name="Scroll" type="Area2D" groups=["items"]]
position = Vector2(-1, -3)
script = ExtResource("1_alfjg")
node_type = ExtResource("2_85qyg")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -1)
scale = Vector2(0.692308, 0.692308)
texture = ExtResource("1_i8y84")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_pidkg")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
